--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,6 +37,34 @@
           }
         }
       }
+    },
+    {
+      "label": "Git Pull",
+      "type": "shell",
+      "command": "git pull",                   // pull latest changes
+      "presentation": {
+        "echo": true,
+        "reveal": "always",                    // always show terminal
+        "focus": false,
+        "panel": "dedicated"                   // separate terminal for this task
+      },
+      "runOptions": {
+        "runOn": "folderOpen"                  // runs on workspace open
+      }
+    },
+    {
+      "label": "Start Angular Dev Server",
+      "type": "shell",
+      "command": "ng serve",                   // starts Angular dev server
+      "presentation": {
+        "echo": true,
+        "reveal": "always",                    // show terminal output
+        "focus": false,
+        "panel": "dedicated"
+      },
+      "runOptions": {
+        "runOn": "folderOpen"                  // also runs on workspace open
+      }
     }
   ]
 }
